--- a/closet.css
+++ b/closet.css
@@ -30,7 +30,9 @@
     height: auto;
     width: 30%;
     
+    
 }
+
 
 
 .wrap{
@@ -48,6 +50,11 @@
 .logo{
     width: 130px;
 }
+
+.bigimg{
+    flex-wrap: wrap;
+
+}
  .bigimg img{
          width:100%;
  }
@@ -59,6 +66,7 @@
          
         width: 100%;
         height:500px;
+        flex-wrap: wrap;
         
       
    
